# dlib_object_detection

./: .gitignore  README.md
common/include/: eval_net_performance.h  eval_net_performance_old.h  load_data.h  load_oid_data.h  obj_det_net_rgb_v04.h  obj_det_net_rgb_v10.h  obj_det_net_rgb_v11.h  obj_det_net_rgb_v12.h  obj_det_net_rgb_v13.h  obj_det_net_rgb_v14.h  obj_det_net_v10.h  obj_det_net_v13.h  obj_det_net_v14.h  obj_det_net_v15.h  obj_det_net_v4.h  run_network_performance.h  run_rgb_network_performance.h  tfd_net_v01.h  tfd_net_v02.h  tfd_net_v03.h  tfd_net_v04.h  yj_net_v01.h  yj_net_v03.h  yj_net_v04.h  yj_net_v05.h  yj_net_v06.h  yj_net_v07.h  yj_net_v08.h  yj_net_v09.h
obj_det_analysis/: CMakeLists.txt  README.md  obj_det_input.txt
obj_det_analysis/src/: oda_ex_v1.cpp
obj_det_lib/: CMakeLists.txt  README.md  obj_det_lib_test_v1.cpp
obj_det_lib/images/: test_input.txt
obj_det_lib/include/: obj_det_lib.h
obj_det_lib/src/: obj_det_lib_v1.cpp
obj_det_rgb_analysis/: README.md  obj_det_input.txt
obj_det_rgb_analysis/include/: obj_detector.h
obj_det_rgb_analysis/src/: oda_ex_v1.cpp
obj_det_rgb_trainer/: CMakeLists.txt  sample_input_file.txt  sample_input_linux.txt
obj_det_rgb_trainer/include/: obj_det_dnn.h
obj_det_rgb_trainer/src/: obj_det_ex_v1.cpp
obj_det_run/: CMakeLists.txt  README.md  sample_input_file.txt  sample_input_linux.txt
obj_det_run/include/: load_data.h  obj_det_run.h  yj_net_v02.h
obj_det_run/src/: obj_det_run_v1.cpp
obj_det_run_lib/: CMakeLists.txt  README.md  sample_input_file.txt  sample_input_linux.txt
obj_det_run_lib/include/: obj_det_run.h
obj_det_run_lib/src/: obj_det_run_lib_v1.cpp
obj_det_trainer/: CMakeLists.txt  README.md  sample_input_file.txt
obj_det_trainer/include/: obj_det_dnn.h
obj_det_trainer/src/: obj_det_ex_v1.cpp
obj_det_viewer/: .gitignore  README.md  requirements.txt
obj_det_viewer/src/: obj_det_viewer.py  obj_det_viewer_vid.py
